--- a/app/views/checkouts/_index.html.erb
+++ b/app/views/checkouts/_index.html.erb
@@ -9,61 +9,14 @@
       o.action = "<%= checkouts_path %>";
     o.submit();
   }
-
-  $(function(){
-    // function to open the dialog
-    $('#excelx_book_dialog_opener').click( function() {
-      $('#excelx_book_dialog').dialog('open');
-      return false;
-    });
-    $('#excelx_book_dialog').dialog({
-        autoOpen: false,
-        modal: true,
-        width: Math.floor($(window).width() * 0.60),
-    });
-    $('#excelx_book_trigger').click( function() {
-      $('#output-form [name="order_identifier"]').val($('#search-form [name="order_identifier"]').val());
-      $('#output-form [name="publication_year"]').val($('#search-form [name="publication_year"]').val());
-      $('#output-form [name="identifier"]').val($('#search-form [name="identifier"]').val());
-      $('#search-form [name="bookstore_code[]"]').each(function(index){
-        if($(this).prop('checked') == true){
-          $('#output-form [name="bookstore_code[]"]').eq(index).val($(this).val());
-        }
-        else{
-          $('#output-form [name="bookstore_code[]"]').eq(index).val('');
-        }
-      });
-      $('#search-form [name="order_organization_id[]"]').each(function(index){
-        if($(this).prop('checked') == true){
-          $('#output-form [name="order_organization_id[]"]').eq(index).val($(this).val());
-        }
-        else{
-          $('#output-form [name="order_organization_id[]"]').eq(index).val('');
-        }
-      });
-      $('#search-form [name="payment_form_code[]"]').each(function(index){
-        if($(this).prop('checked') == true){
-          $('#output-form [name="payment_form_code[]"]').eq(index).val($(this).val());
-        }
-        else{
-          $('#output-form [name="payment_form_code[]"]').eq(index).val('');
-        }
-      });
-      
-      $('#output-form').submit();
-      $('#excelx_book_dialog').dialog('close');
-      return false;
-    });
-    $('#check_all_ouput_columns').click(function() {
-      $('#output-form input:checkbox').prop('checked', $(this).is(':checked'));
-    });
-  });
 </script>
 
 <div id="content_detail" class="ui-corner-all">
 <h1 class="title"><%= t('page.listing', :model => t('activerecord.models.checkout')) -%></h1>
 <div id="content_list">
 <%= form_for :checkout, :url => checkouts_path, :html => {:method => 'get', :id => 'form'} do -%>
+  <%= hidden_field_tag "order", params[:order] %>
+  <%= hidden_field_tag "sort_by", params[:sort_by] %>
   <p>
     <%= t('advanced_search.library') -%>:
     <%= select("library", "id", @libraries, {:include_blank => t('advanced_search.all_libraries'), :selected => @selected_library})%>
@@ -72,6 +25,7 @@
     <%= submit_tag t('page.output_tsv', :model =>t('page.listing', :model => t('activerecord.models.checkout'))), :onclick => "push_submit('tsv');"-%>
     <%= button_tag t('page.output_excelx', :model =>t('page.listing', :model => t('activerecord.models.checkout'))), :type => "button", :id => "excelx_book_dialog_opener" -%>
   </p>
+  <div id="dialog_data" style="display:none;"></div>
 <%- end -%>
 
 <%= render 'list' -%>
@@ -95,32 +49,4 @@
     <%- end -%>
     <li><%= link_to t('page.overdue'), checkouts_path(:view => 'overdue') -%></li>
   </ul>
-</div>
-
-<div id="excelx_book_dialog" title="<%= t('page.output', :model => t('page.search_result')) %>" style="display:none;">
-  <%= form_tag({:format => 'xlsx', :params => params},  {:method => "get", :id => "output-form"}) do %>
-    <div id='check_cols_book'>
-      <br />
-      <strong><%= t('page.output_excelx_dialog') %></strong>
-      <br />
-      <ul>
-        <li style="list-style: none; width: 30%; float: left;">
-        <%= check_box_tag "check_all_ouput_columns", true, true %><%= t('checkout_output_excel.check_all_ouput_column') %>
-        </li>
-      </ul>
-      <br style='clear: both' />
-      <ul>
-        <% @ouput_columns.each_with_index do |ouput_column, index| %>
-          <li style="list-style: none; width: 30%; float: left;">
-            <%= check_box_tag "ouput_column[]", ouput_column[:name], true %>
-            <%= t("checkout_output_excel.#{ouput_column[:name]}") -%>
-          </li>
-        <% end %>
-      </ul>
-    </div>
-    <br style='clear: both' />
-    <div>
-      <br /><button id="excelx_book_trigger"><%= t('page.output_excelx_detail') %></button>
-    </div>
-  <% end %>
 </div>
