--- a/app/views/reserves/_reserve.html.erb
+++ b/app/views/reserves/_reserve.html.erb
@@ -6,9 +6,9 @@
     <td><%= render 'reserves/title', :reserve => @reserve -%></td>
     <td>
       <%= i18n_information_type(@reserve.information_type_id) %>&nbsp;
-      <% if false # reserve.information_type_id == 1 %>
-        <%= mail_to Reserve.get_information_type(reserve), 
-          Reserve.get_information_type(reserve), :subject => reserve.retained_mail_title, :body => reserve.retained_mail_message %>
+      <% if @reserve.information_type_id == 1 %>
+        <%= mail_to Reserve.get_information_type(@reserve), 
+          Reserve.get_information_type(@reserve), :subject => @reserve.retained_mail_title, :body => @reserve.retained_mail_message %>
       <% else %>
         <%= Reserve.get_information_type(@reserve)%>
       <% end %>
