--- a/app/views/reserves/_search_and_output.html.erb
+++ b/app/views/reserves/_search_and_output.html.erb
@@ -65,6 +65,7 @@
     <br style="clear:both;"/>
   </div>
   <div>
+    <%= t('reserve.search.only_from_opac') %>: <%= check_box_tag 'only_from_opac', true, @only_from_opac %><br />
     <%= t('page.search_term') -%>: <%= search_field_tag 'query', h(@query), {:id => 'search_form_top', :class => 'search_form', :placeholder => t('page.search_term')} -%><br />
     <%= t('activerecord.attributes.user.birth_date') -%>:
     <%= text_field_tag 'birth_date', @date_of_birth, :class => 'wide_date_text_field', :placeholder => "#{t('page.example')}: 2011-04-12" -%>
