--- a/app/views/checkouts/_list.html.erb
+++ b/app/views/checkouts/_list.html.erb
@@ -23,13 +23,13 @@
   <%- @checkouts.each_with_index do |checkout, i| %>
   <tr class="line<%= cycle("0", "1") -%>">
     <td>
-      <%= link_to checkout.user_username, checkout.user %>
-      <br />
+      <%= checkout.user.agent.full_name if checkout.user.agent %><br />
+      <%= link_to checkout.user_username, checkout.user %><br />
       (<%= link_to checkout.user_user_number, checkout.user %>)
     </td>
     <td>
       <%= render 'manifestations/show_index', :manifestation => checkout.item.manifestation -%>
-      <%= t('activerecord.attributes.item.call_number') -%>: <%= link_to call_numberformat(checkout.item), item_path(checkout.item) -%> /
+      <%- if checkout.item.call_number %><%= t('activerecord.attributes.item.call_number') -%>: <%= link_to call_numberformat(checkout.item), item_path(checkout.item) -%> /<%- end -%>
       <%= t('activerecord.attributes.item.item_identifier') -%>: <%= link_to checkout.item.item_identifier, item_path(checkout.item) -%>
     </td>
     <td><%= l(checkout.due_date, :format => :only_date) -%></td>
