返却表示画面の表示名修正

--- a/app/views/checkins/show.html.erb
+++ b/app/views/checkins/show.html.erb
@@ -9,7 +9,7 @@
 </p>
 
 <p>
-<strong><%= ('Librarian') -%>:</strong>
+<strong><%= t('checkin.checkin_executer') -%>:</strong>
   <%= link_to @checkin.librarian.username, @checkin.librarian -%>
 </p>
 
