refs 7365 貸出履歴一覧出力を修正

--- a/app/views/checkouts/_index.html.erb
+++ b/app/views/checkouts/_index.html.erb
@@ -53,7 +53,9 @@
     <%= submit_tag t('page.search'), :onclick => "push_submit(null);" -%>
     <%= submit_tag t('page.output_pdf', :model =>t('page.listing', :model => t('activerecord.models.checkout'))), :onclick => "push_submit('pdf');" -%>
     <%= submit_tag t('page.output_tsv', :model =>t('page.listing', :model => t('activerecord.models.checkout'))), :onclick => "push_submit('tsv');"-%>
-    <%= submit_tag t('page.output_excelx', :model => t('page.listing', :model => t('activerecord.models.checkout'))), :name => 'output_excel' %> 
+    <%= submit_tag t('page.output_excelx', :model =>t('page.listing', :model => t('activerecord.models.checkout'))), :id => "excelx_book_dialog_opener" -%>
+  </p>
+  <div id="dialog_data" style="display:none;"></div>
 <%- end -%>
 
 <%= render 'list' -%>
