--- a/app/views/checkins/_list.html.erb
+++ b/app/views/checkins/_list.html.erb
@@ -21,7 +21,7 @@
   <%- end -%>
 <%- end -%>
 <%- unless @reserve.nil? -%>
-  <%= form_tag({:controller => 'reserves', :action => 'output', :reserve_id => @reserve.id}, {:method => 'post'}) do -%>
+  <%= form_tag({:controller => 'reserves', :action => 'output', :id => @reserve.id, :reserve_id => @reserve.id}, {:method => 'post'}) do -%>
     <%= submit_tag t('page.output', :model => t('activerecord.attributes.reserve.reserve_list')) -%>
   <%- end -%>
 <%- end -%>
