--- a/app/views/reserves/index.html.erb
+++ b/app/views/reserves/index.html.erb
@@ -203,7 +203,7 @@
     <%- if current_user.has_role?('Librarian') -%>
       <li><%= link_to t('reserve.all_reservation'), reserves_path -%></li>
       <li><%= link_to t('reserve.my_reservation'), user_reserves_path(current_user) -%></li>
-      <% if SystemConfiguration.get("reserve.auto_retain") %>
+      <% unless SystemConfiguration.get("reserve.auto_retain") %>
         <li><%= link_to t('reserve.retain'), retain_reserves_path -%></li> 
         <li><%= link_to t('activerecord.models.retained_manifestation'), retained_manifestations_path -%></li>
       <% end %>
