--- a/app/views/baskets/new.html.erb
+++ b/app/views/baskets/new.html.erb
@@ -5,7 +5,7 @@
 <%= form_for(@basket, :html => {:name => 'basket_form'}) do |f| -%>
   <%= f.error_messages -%>
   <div class="field">
-    <%= f.label t('activerecord.attributes.user.user_number') -%>
+    <%= f.label t('basket.checkout_user_number') -%>
     <%= f.text_field :user_number, :class => 'resource_user_number', :style => 'ime-mode:disabled' -%>
 
   <!--
