--- a/app/views/reserves/_new.html.erb
+++ b/app/views/reserves/_new.html.erb
@@ -90,7 +90,7 @@
   </div>
 
   <div class="field">
-    <%= f.label t('activerecord.attributes.user.user_number') -%><br />
+    <%= f.label t('basket.checkout_user_number') -%><br />
     <%= f.text_field :user_number, :class => 'resource_user_number' -%>
   </div>
   <div class="field">
