--- a/app/views/reserves/_new_user.html.erb
+++ b/app/views/reserves/_new_user.html.erb
@@ -43,7 +43,7 @@ $(function(){
   </div>
   <div class="field">
     <%= f.hidden_field :user_number, :value => @user.user_number -%>
-    <%= f.submit t('page.create'), :disable_with => t('page.wait') -%>
+    <%= f.submit t('reserve.add'), :disable_with => t('page.wait') -%>
   </div>
 <%- end -%>
 </div>
