--- a/app/views/reserves/_new.html.erb
+++ b/app/views/reserves/_new.html.erb
@@ -106,7 +106,7 @@
     <%= f.text_field :expired_at, :value => @reserve.expired_at.try(:strftime, "%Y-%m-%d"), :class => 'date_field', :placeholder => "#{t('page.example')}: 2011-04-12"-%>
   </div>
   <div class="actions">
-    <%= f.submit t('page.create'), :disable_with => t('page.wait'), :disabled => true, :id=> "reserve_submit" -%>
+    <%= f.submit t('reserve.add'), :disable_with => t('page.wait'), :disabled => true, :id=> "reserve_submit" -%>
   </div>
 <%- end -%>
 <%= javascript_tag("$('#reserve_user_number').focus()") -%>
