--- a/app/views/reserves/_new_user.mobile.erb
+++ b/app/views/reserves/_new_user.mobile.erb
@@ -4,8 +4,11 @@ $(function(){
 });
 </script>
 
-<div id="content_detail" class="ui-corner-all">
-<h1 class="title"><%= t('page.new', :model => t('activerecord.models.reserve')) -%></h1>
+<div data-role="header">
+  <a href="javascript:history.back()" data-icon="back" data-iconpos="notext" class="ui-btn-left"><%= t('page.back') %></a>
+  <h1 class="title"><%= t('page.new', :model => t('activerecord.models.reserve')) -%></h1>
+</div>
+
 <div id="content_list">
 
 <%= form_for(@reserve, :url => user_reserves_path(@user)) do |f| -%>
@@ -46,15 +49,4 @@ $(function(){
     <%= f.submit t('reserve.add'), :disable_with => t('page.wait') -%>
   </div>
 <%- end -%>
-</div>
-</div>
-
-<div id="submenu" class="ui-corner-all">
-  <%= render 'manifestations/book_jacket', :manifestation => @reserve.manifestation -%>
-  <ul>
-    <li><%= link_to t('page.listing', :model => t('activerecord.models.reserve')), user_reserves_path(@reserve.user) -%></li>
-    <%- if @manifestation -%>
-      <li><%= link_to t('page.showing', :model => t('activerecord.models.manifestation')), @manifestation -%></li>
-    <%- end -%>
-  </ul>
 </div>
