--- a/app/views/reserves/show.mobile.erb
+++ b/app/views/reserves/show.mobile.erb
@@ -1,17 +1,8 @@
-<div id="content_detail" class="ui-corner-all">
 <h1 class="title"><%= t('page.showing', :model => t('activerecord.models.reserve')) -%></h1>
-<div id="content_list">
 <p id="notice"><%= notice %></p>
 
 <%= render 'manifestations/title', :manifestation => @reserve.manifestation -%>
-<%= render 'manifestations/show_series_number', :manifestation => @reserve.manifestation -%>
-
-<p>
-  <%- if user_signed_in? and current_user.has_role?('Librarian') -%>
-    (<%= link_to t('page.number_of_reservations', :count => @reserved_count), manifestation_reserves_path(@reserve.manifestation) -%>)
-    <br /><br/ >
-  <%- end -%>
-</p>
+<%#= render 'manifestations/show_series_number', :manifestation => @reserve.manifestation -%>
 
 <p>
   <strong><%= t('activerecord.models.user') -%>:</strong>
@@ -71,49 +62,13 @@
 <strong><%= t('activerecord.attributes.reserve.checked_out_at') -%>:</strong>
   <%= l(@reserve.checked_out_at) if @reserve.checked_out_at -%>
 </p>
-<%- if @reserve.can_checkout? -%>
-  <%- if is_reserve_autoprint?(request.remote_ip) -%>
-    <object classid="clsid:CA8A9780-280D-11CF-A24D-444553540000" id="objPdf" width="0" height="0">
-      <param name="src" value="<%= output_pdf_reserve_path(@reserve.id) -%>">
-    </object>
-<script>
-$(function(){
-  //$('#button_print_pdf').click(function(){
-  //  objPdf.printAll();
-  //  $('#notice').html('<strong><%= t('reserve.printout_in_progress') -%></strong>');
-  //});
-  objPdf.printAll();
-});
-</script>
-<!--
-    <button id="button_print_pdf"><%= t('activerecord.attributes.reserve.reserve_list') -%></button>
--->
-  <%- else -%>
-    <%= form_tag ({:action => 'output'}) do -%>
-      <%= hidden_field_tag :reserve_id, @reserve.id -%>
-      <%= submit_tag t('page.output', :model => t('activerecord.attributes.reserve.reserve_list')) -%>
-    <%- end -%>
+
+
+<%- if @reserve.can_edit? and  @reserve.can_checkout? -%>
+  <%= link_to t('page.edit'), edit_user_reserve_path(@reserve.user, @reserve) -%>
+<%- end -%>
+<%- if @reserve.user.reserves.waiting.include?(@reserve) -%>
+  <%- if @reserve.can_cancel? -%>
+    <%= link_to t('page.cancel'), user_reserve_path(@reserve.user, @reserve, :mode => 'cancel'), :confirm => t('page.cancel_confirm'), :method => :put -%>
   <%- end -%>
 <%- end -%>
-</div>
-</div>
-
-<div id="submenu" class="ui-corner-all">
-  <%= render 'manifestations/book_jacket', :manifestation => @reserve.manifestation -%>
-  <ul>
-    <%- if @reserve.can_edit? and  @reserve.can_checkout? -%>
-      <li><%= link_to t('page.edit'), edit_user_reserve_path(@reserve.user, @reserve) -%></li>
-    <%- end -%>
-    <%- if @reserve.user.reserves.waiting.include?(@reserve) -%>
-      <%- if @reserve.can_cancel? -%>
-        <li><%= link_to t('page.cancel'), user_reserve_path(@reserve.user, @reserve, :mode => 'cancel'), :confirm => t('page.cancel_confirm'), :method => :put -%></li>
-      <%- end -%>
-    <%- else -%>
-      <li><%= link_to t('page.destroy'), user_reserve_path(@reserve.user, @reserve), :confirm => t('page.are_you_sure'), :method => :delete -%></li>
-    <%- end -%>
-    <li><%= link_to t('page.back'), user_reserves_path(@reserve.user) -%></li>
-  </ul>
-  <!--
-  <p>TODO: 予約取り消し時に、次の予約者に連絡する</p>
-  -->
-</div>
